src/test/ui/issues/issue-30535.stderr
error[E0573]: expected type, found variant `foo::Foo::FooV`
  --> $DIR/issue-30535.rs:6:8
   |
LL |     _: foo::Foo::FooV
   |        ^^^^^^^^^^^^^^
   |        |
   |        not a type
   |        help: try using the variant's enum: `foo::Foo`

error: aborting due to previous error

